force-app/main/default/objects/AV_CustomerJourney__c/AV_CustomerJourney__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene el custom journey</description>
    <label>Customer journey</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>