force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_Channel__c.field-meta.xml
<CustomField>
    <fullName>AV_Channel__c</fullName>
    <description>Canal del customer journey</description>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AV_DigitalEmail</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>AV_DigitalMuro</fullName>
                <label>Muro</label>
            </value>
            <value>
                <fullName>AV_DigitalSMS</fullName>
                <label>SMS</label>
            </value>
            <value>
                <fullName>AV_DigitalNotifApp</fullName>
                <label>Notificación app</label>
            </value>
            <value>
                <fullName>AV_DigitalBannerNow</fullName>
                <label>Banner NOW</label>
            </value>
            <value>
                <fullName>AV_Telemarketing</fullName>
                <label>Telemarketing</label>
            </value>
            <value>
                <fullName>AV_Gestor</fullName>
                <label>Gestor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>