force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_CJName__c.field-meta.xml
<CustomField>
    <fullName>AV_CJName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Impacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>