force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_Duration__c.field-meta.xml
<CustomField>
    <fullName>AV_Duration__c</fullName>
    <description>Duración máxima del Customer Journey en días</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Duración</label>
    <length>255</length>
    <type>Text</type>
</CustomField>