force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_Error__c.field-meta.xml
<CustomField>
    <fullName>AV_Error__c</fullName>
    <description>Error del customer journey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>