force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_ErrorDateTime__c.field-meta.xml
<CustomField>
    <fullName>AV_ErrorDateTime__c</fullName>
    <description>Error de la fecha del customer journey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error DateTime</label>
    <type>DateTime</type>
</CustomField>