force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_Experience__c.field-meta.xml
<CustomField>
    <fullName>AV_Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vertical (disfrutar de la vida, pensar en el futuro, dormir trnquilo y disfrutar de la vida)</description>
    <label>Experiencia-Negocio</label>
    <referenceTo>AV_ExperienceBusiness__c</referenceTo>
    <relationshipLabel>Customer journeys</relationshipLabel>
    <relationshipName>Customer_journeys</relationshipName>
    <type>Lookup</type>
</CustomField>