force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_Family__c.field-meta.xml
<CustomField>
    <fullName>AV_Family__c</fullName>
    <description>Familias</description>
    <label>Familias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV_Operativo</fullName>
                <label>Operativo</label>
            </value>
            <value>
                <fullName>AV_ComercialVenta</fullName>
                <label>Comercial Venta</label>
            </value>
            <value>
                <fullName>AV_ComercialRetencion</fullName>
                <label>Comercial Retención</label>
            </value>
            <value>
                <fullName>AV_Onboarding</fullName>
                <label>Onboarding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>