force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_LastImpactDate_del__c.field-meta.xml
<CustomField>
    <fullName>AV_LastImpactDate_del__c</fullName>
    <description>Fecha del último impacto recibido</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Último impacto</label>
    <type>DateTime</type>
</CustomField>