force-app/main/default/objects/AV_CustomerJourney__c/fields/AV_ProductName__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductName__c</fullName>
    <formula>AV_ProductN20__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>