force-app/main/default/objects/AV_CustomerJourney__c/recordTypes/AV_CustomerJourney.recordType-meta.xml
<RecordType>
    <fullName>AV_CustomerJourney</fullName>
    <active>true</active>
    <label>Customer Journey</label>
</RecordType>